# build-with-ag2

./: .gitattributes  .gitignore  README.md
a2ui/flutter/: .env.example  README.md  backend.py  requirements.txt  social_catalog.json
ag-ui/: README.md
ag-ui/factory/: README.md  backend.py  frontend.html
ag-ui/gpt-researcher/: README.md  frontend.html  main.py  requirements.txt  server.py  task.json
ag-ui/weather/: README.md  backend.py  frontend.html
ag2-workshop/: .env.example  README.md  requirements.txt
ag2-workshop/episodes/: ep01_why_agents.ipynb  ep02_first_agent.ipynb  ep03_tools.ipynb  ep04_task_delegation.ipynb  ep04_two_agents.ipynb  ep05_live_agent.ipynb  ep05_round_robin.ipynb  ep06_agent_harness.ipynb  ep06_auto_pattern.ipynb  ep07_handoffs.ipynb  ep07_middleware.ipynb  ep08_assembly_policies.ipynb  ep08_pipelines.ipynb  ep09_choosing_patterns.ipynb  ep09_structured_output.ipynb  ep10_hub_intro.ipynb  ep10_real_app.ipynb  ep11_consulting.ipynb  ep11_research.ipynb  ep12_conversation.ipynb  ep12_knowledge_base.ipynb  ep13_discussion.ipynb  ep13_web_browsing.ipynb  ep14_agent_ui.ipynb  ep14_workflow.ipynb  ep15_coordinator_pattern.ipynb  ep15_mcp.ipynb  ep16_choosing_patterns.ipynb  ep16_observability.ipynb  ep17_real_app.ipynb  ep17_security.ipynb  ep18_research.ipynb  ep18_testing.ipynb  ep19_cost_optimization.ipynb  ep19_knowledge_base.ipynb  ep20_deploy.ipynb  ep20_web_browsing.ipynb  ep21_agent_ui.ipynb  ep21_redundant.ipynb  ep22_plain_html_frontend.ipynb  (+15 more)
ag2-workshop/module1_introduction/: module1_introduction.ipynb
ag2-workshop/module2_setup/: setup_and_basics.ipynb
ag2-workshop/module3_core_concepts_and_architectures/: architectures.ipynb  core_concepts.ipynb
ag2-workshop/module4_advanced_agent_design_patterns/: 4.1_context_aware_routing.ipynb  4.2_escalation.ipynb  4.3_feedback_loop.ipynb  4.4_hirarchical.ipynb  4.5_organic.ipynb  4.6_sequential.ipynb  4.7_redundent.ipynb
ag2-workshop/module5_building_custom_agents/: custom_agent2_customer_support.ipynb  customer_support_agent.py  my_app.py
ag2-workshop/module6_integration_with_external_tools/: README.md  integrate_agent_with_mcp.py  mcp_arxiv.py
arcade/gmail-agent/: .env.example  README.md  main.py  pyproject.toml
arcade/linear-agent/: .env.example  README.md  main.py  pyproject.toml
automate-ml-for-kaggle/: README.html  README.md  index.html  main.py  pyproject.toml
beta/ask-the-web/: .env.example  backend.py  pyproject.toml
beta/data-analyst/: .env.example  backend.py  pyproject.toml
beta/mystery-dinner/: README.md
beta/parallel-research/: .env.example  main.py  pyproject.toml
bindu-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml
co-scientist/: README.md  hypo_objects.py  main.py  old_main.py  ranking_agent.py  requirements.txt  task_manager.py  test_search.ipynb  utils.py
data-hack-summit/: README.md  requirements.txt
data-hack-summit/module2_setup/: setup_and_basics.ipynb
data-hack-summit/module3_core_concepts_and_architectures/: architectures.ipynb  core_concepts.ipynb
data-hack-summit/module4_advanced_agent_design_patterns/: 4.1_context_aware_routing.ipynb  (+6 more)
dataroom-research/: README.html  README.md  gdrive_signin.py  main.py  pyproject.toml  requirements.txt
deep-research-agent/: README.html  README.md  backend.py  frontend.py  main.py  pyproject.toml
due-diligence-with-tinyfish/: .gitignore  README.md  main.py  prompts.py  requirements.txt
e-commerce-customer-service/: README.html  README.md  functions.py  main.py  pyproject.toml
econ-refereeos/: .env.example  AI_LOG.md  ATTRIBUTION.md  CHANGELOG.md  G1_ENDORSEMENT.md  README.md  requirements.txt  安书伟_C5-AG2_repo.md
email-management/: README.html  README.md  email_utils.py  main.py  pyproject.toml
financial-analysis/: README.html  README.md  main.py  pyproject.toml
game-design-agent-team/: README.md  main.py  requirements.txt
game_design_agent_team/: pyproject.toml
gcp-agent-starter-pack/templates/ag2/: README.md  pyproject.toml
gcp-agent-starter-pack/templates/ag2/app/: agent.py  fast_api_app.py
gcp-agent-starter-pack/templates/ag2/app/app_utils/: telemetry.py  typing.py
gcp-agent-starter-pack/templates/ag2/tests/integration/: test_agent.py
generator/: README.md  create_project.py  readme.py  template.ipynb  utils.py
hello-agent/: .gitignore  OAI_CONFIG_LIST_sample  README.md  hello-agent.ipynb  pyproject.toml
italy-travel-planner/: README.md  main.py  requirements.txt
itops/: README.md  pyproject.toml  start.sh
itops/frontend/: index.html  package-lock.json  package.json
itops/frontend/src/: App.jsx  tokens.css
itops/frontend/src/components/: AgentTrace.jsx  EvidenceFeed.jsx  HITLPanel.jsx  Markdown.jsx  RCASynthesis.jsx  StatusBadge.jsx  TitleBar.jsx
itops/frontend/src/data/: mockData.js
itops/frontend/src/live/: BackendProvider.jsx  backend.js  mappers.js
itops/frontend/src/pages/: DashboardPage.jsx  InvestigationPage.jsx  MonitoringPage.jsx
itops/it_ops_app/: README.md  server.py  smoke_client.py
itops/orchestration/: .env.example  README.md  mock_world.py  mockup.html  parallel_workflow.py  run_demo.py  test_e2e_workflow.py  test_parallel_workflow.py
linear-agent/: README.md
manage-todos-with-realtime-agent/: requirements.txt
project-template/: requirements.txt
simple-qna-agent/: .env.example  README.md  main.py
tech-decision-debate/: .env.example  README.md  main.py  requirements.txt
travel-planner/: .env.example  README.md  google_map_platforms.py  main.py  pyproject.toml  requirements.txt
workshop-08232025-data-hack-summit/: README.md  requirements.txt
(+168 files in other folders)
