[project]
name = "automate-ml-for-kaggle"
version = "0.1.0"
description = "Automate ML workflows for Kaggle competitions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag2[jupyter-executor,openai]>=0.9.9",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "seaborn",
    "xgboost",
    "lightgbm",
    "catboost",
]
