[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bindu-agent-demo"
version = "0.1.0"
description = "Production-ready AG2 plus Bindu sample service with environment-driven configuration"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "AG2 Example Maintainers", email = "ag2.developer@example.com" }
]
keywords = ["ag2", "bindu", "a2a", "agent", "openrouter"]
dependencies = [
    "ag2[openai]>=0.2.0",
    "bindu>=0.1.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
bindu-agent-demo = "main:main"
