[project]
name = "email-management"
version = "0.1.0"
description = "Email management agent with Gmail integration and autogen capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag2[openai]>=0.9.9",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.110.0",
    "beautifulsoup4>=4.12.0",
]
