[project]
name = "ag2-agent"
version = "0.1.0"
description = "AG2 agent with A2A protocol support on Google Cloud"
requires-python = ">=3.10,<3.14"
dependencies = [
    # AG2 framework with Gemini support
    "ag2[gemini]>=0.10.4",
    # A2A protocol
    "a2a-sdk[http-server]>=0.3.22",
    # Telemetry
    "traceloop-sdk>=0.51.1,<1.0.0",
    "opentelemetry-exporter-gcp-trace>=1.11.0,<2.0.0",
    "opentelemetry-instrumentation-google-genai>=0.6b0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1,<2.0.0",
    # Utilities
    "python-dotenv>=1.2.1,<2.0.0",
    # GCP infrastructure
    "google-cloud-logging>=3.13.0,<4.0.0",
    "google-cloud-aiplatform[evaluation]>=1.135.0,<2.0.0",
    "gcsfs>=2026.1.0",
    # Server (Cloud Run)
    "fastapi~=0.128.0",
    "uvicorn~=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "codespell>=2.2.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# --- agent-starter-pack configuration ---
[tool.agent-starter-pack]
name = "AG2 Agent"
description = "AG2 multi-agent framework with A2A protocol support on Google Cloud"
base_template = "custom_a2a"

[tool.agent-starter-pack.settings]
deployment_targets = ["cloud_run"]
agent_directory = "app"
